--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: ruby
 dist: xenial
 before_install:
   - gem update --system
-  - yes | rvm @global do gem install bundler -v 1.17.3 || true
+  - gem uninstall bundler
+  - gem install bundler -v 1.17.3
 rvm:
   - 2.3.8
   - 2.4.6
