--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: xenial
 before_install:
   - gem update --system
   - gem install bundler -v 1.17.3
-  - gem uninstall bundler
+  - yes | gem uninstall bundler
 rvm:
   - 2.3.8
   - 2.4.6
