--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 dist: xenial
 before_install:
-  - gem update --system
+  - rvm gemset create travis
+  - rvm gemset use travis
   - gem install bundler -v 1.17.3
-  - yes | gem uninstall bundler
 rvm:
   - 2.3.8
   - 2.4.6
